--- a/Docker-compose/Project/docker-compose.yml
+++ b/Docker-compose/Project/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     ports:
       - "5672:5672"
     environment:
-      - RABBITMQ_DEFAULT_USER: test
-      - RABBITMQ_DEFAULT_PASS: test
+      - RABBITMQ_DEFAULT_USER=test
+      - RABBITMQ_DEFAULT_PASS=test
 
   ssapp:
     image: quadridevops135/app:v1
