--- a/DockerFiles/web/Dockerfile
+++ b/DockerFiles/web/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx
 LABEL "project"="java"
 LABEL "author"="sscademy"
 RUN rm -rf /etc/nginx/conf.d/default.conf
-COPY nginxsscademyapp.conf /etc/nginx/conf.d/default.conf/sscademyapp.conf
+COPY nginxsscademyapp.conf /etc/nginx/conf.d/sscademyapp.conf
