--- a/DockerFiles/web/nginxsscademyapp.conf
+++ b/DockerFiles/web/nginxsscademyapp.conf
@@ -1,8 +1,8 @@
-upstream sscademyapp {
-    server ssapp:8080;
+upstream ssapp {
+ server ssapp:8080;
 }
 server {
-    listen 80;
+  listen 80;
 location / {
     proxy_pass http://ssapp;
 }
