added project dir

--- a/DockerFiles/web/Dockerfile
+++ b/DockerFiles/web/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx
 LABEL "project"="java"
 LABEL "author"="sscademy"
+
 RUN rm -rf /etc/nginx/conf.d/default.conf
-COPY nginxsscademyapp.conf /etc/nginx/conf.d/sscademyapp.conf
+COPY nginxsscademyapp.conf /etc/nginx/conf.d/ssapp.conf
