--- a/Playbooks/22_before_roles.yaml
+++ b/Playbooks/22_before_roles.yaml
@@ -2,6 +2,8 @@
 
 - name: Server configuration
   hosts: all
+  vars:
+    ntp_path: "{{ntp_path}}"
   tasks:
    - name: Install NTP on Centos
      yum:
@@ -38,7 +40,7 @@
    - name: Deploy NTP conf on Debian machines
      template:
        src: template/ntp_debian.conf.j2
-       dest: /etc/ntp.conf
+       dest: "{{ntp_path}}"
      when: ansible_os_family == "Debian"
      notify:
        - restart ntp service on Debian
@@ -46,7 +48,7 @@
    - name: Deploy NTP conf on RedHat machines
      template:
        src: template/ntp_redhat.conf.j2
-       dest: /etc/ntp.conf
+       dest: "{{ntp_path}}"
      when: ansible_os_family == "RedHat"
      notify:
       - restart ntp service on RedHat
@@ -56,6 +58,11 @@
       path: /etc/devdata
       state: directory
       mode: 0742
+
+   - name: Deploy dev data file
+     copy:
+       src: file/dev.txt
+       dest: /opt/devdata/dev.txt
 
   handlers:
    - name: restart ntp service on Debian
