--- a/kubernetes/app/dbdep.yml
+++ b/kubernetes/app/dbdep.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: sscademy-db
-        image: imranvisualpath/8pmdbimg:v1
+        image: mysql:5.7.30
         ports:
         - name: db-port
           containerPort: 3306
